--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Daddy’s Empire | Ссылка-профиль</title>
   <meta name="description" content="Империя твоего успеха. Telegram-возможности и мотивация от Daddysempire.">
-  <link rel="icon" href="https://i.postimg.cc/bY6MbChf/daddy-avatar.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -37,7 +36,7 @@
     </div>
 
     <section class="grid gap-4 grid-cols-1 mb-6">
-      <img src="https://i.postimg.cc/wT6v7Mwn/daddy-banner.jpg" class="rounded-lg shadow" alt="Empire Banner">
+      <img src="https://i.postimg.cc/h4CSdhHd/eb727922-3d28-42c7-a270-607259019322.png" class="rounded-lg shadow" alt="Empire Banner">
     </section>
 
     <a href="https://t.me/empiredaddy" class="block text-center custom-button text-white font-semibold py-3 px-6 rounded-lg mb-6 transition animate-pulse">Начать зарабатывать</a>
