--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <main class="max-w-xl mx-auto px-4 py-10">
+  <main class="max-w-xl mx-auto px-4 pt-4 pb-8">
     <div class="text-center mb-8">
       <h1 class="heading mt-4">Daddy’s Empire</h1>
       <p class="text-sm text-gray-300 mt-2">Империя твоего успеха</p>
