--- a/index.html
+++ b/index.html
@@ -38,10 +38,40 @@
       <img src="https://i.postimg.cc/h4CSdhHd/eb727922-3d28-42c7-a270-607259019322.png" class="rounded-lg shadow" alt="Empire Banner">
     </section>
 
-    <a href="https://t.me/empiredaddy" 
+    <!-- КНОПКА С БЛИКОМ -->
+<a href="https://t.me/empiredaddy" 
    class="block text-center text-white font-normal py-3 px-6 rounded-lg custom-glow-button transition"
    style="background-color: #a61e4d; font-family: 'Roboto', sans-serif; font-size: 16px; line-height: 1.2;">
   Начать зарабатывать
+</a>
+
+<style>
+@keyframes blink {
+  0%, 97% { opacity: 1; }
+  98%     { opacity: 0.6; }
+  100%    { opacity: 1; }
+}
+.custom-glow-button {
+  animation: blink 5s ease-in-out infinite;
+}
+</style>
+<!-- КНОПКА С БЛИКОМ -->
+<a href="https://t.me/empiredaddy" 
+   class="block text-center text-white font-normal py-3 px-6 rounded-lg custom-glow-button transition"
+   style="background-color: #a61e4d; font-family: 'Roboto', sans-serif; font-size: 16px; line-height: 1.2;">
+  Начать зарабатывать
+</a>
+
+<style>
+@keyframes blink {
+  0%, 97% { opacity: 1; }
+  98%     { opacity: 0.6; }
+  100%    { opacity: 1; }
+}
+.custom-glow-button {
+  animation: blink 5s ease-in-out infinite;
+}
+</style>
 </a>
 
     <p class="text-center text-gray-400 text-sm mt-6">Все на кончиках твоих пальцев — а у тебя до сих пор есть оправдания</p>
