--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Daddy’s Empire | Ссылка-профиль</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FQXX0RRV1N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FQXX0RRV1N');
+</script>
+
   <meta name="description" content="Империя твоего успеха. Telegram-возможности и мотивация от Daddysempire.">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
