--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="https://i.postimg.cc/h4CSdhHd/eb727922-3d28-42c7-a270-607259019322.png" class="rounded-lg shadow" alt="Empire Banner">
     </section>
 
-    <a href="https://t.me/empiredaddy" class="block text-center custom-button text-white font-semibold py-3 px-6 rounded-lg mb-6 transition animate-pulse">Начать зарабатывать</a>
+    <a href="https://t.me/empiredaddy" class="block text-center custom-button text-white font-semibold py-3 px-6 rounded-lg mb-6 transition animate-pulse">Начать</a>
 
     <p class="text-center text-gray-400 text-sm mt-6">Все на кончиках твоих пальцев — а у тебя до сих пор есть оправдания</p>
   </main>
