--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main class="max-w-xl mx-auto px-4 pt-4 pb-8">
     <div class="text-center mb-8">
       <h1 class="heading mt-4 leading-tight">Daddy’s Empire</h1>
-      <p class="text-sm text-gray-300 mt-2">Империя твоего успеха</p>
+      <p class="text-sm text-gray-300 mt-2">Твоя собственная империя</p>
     </div>
 
     <section class="grid gap-4 grid-cols-1 mb-6">
