--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <main class="max-w-xl mx-auto px-4 pt-4 pb-8">
     <div class="text-center mb-8">
       <h1 class="heading mt-4 leading-tight">Daddy’s Empire</h1>
-      <p class="text-sm text-gray-300 mt-2">Твоя собственная империя</p>
+      <p class="text-sm text-gray-300 mt-2">Твоя собственная империя уже ждет тебя</p>
     </div>
 
     <section class="grid gap-4 grid-cols-1 mb-6">
       <img src="https://i.postimg.cc/h4CSdhHd/eb727922-3d28-42c7-a270-607259019322.png" class="rounded-lg shadow" alt="Empire Banner">
     </section>
 
-    <a href="https://t.me/DADDYEMPIREBOT" class="block text-center custom-button text-white font-semibold py-3 px-6 rounded-lg mb-6 transition animate-pulse">Начать</a>
+    <a href="https://t.me/DADDYEMPIREBOT" class="block text-center custom-button text-white font-semibold py-3 px-6 rounded-lg mb-6 transition animate-pulse">Начать зарабатывать</a>
 
     <p class="text-center text-gray-400 text-sm mt-6">Все на кончиках твоих пальцев — а у тебя до сих пор есть оправдания</p>
   </main>
